# Chest-X-Ray-Pathology-Classifier

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-build.sh  docker-run.sh  pyproject.toml  requirements.txt  setup.py
XRAM/data/: dataset.py
XRAM/models/: config.json  train_model.py
ckpt/: ram_6_8x8_1_ckpt.pth.tar  ram_6_8x8_1_model_best.pth.tar
docs/: Makefile  conf.py  index.rst  make.bat
models/ckpt/: latest_checkpoint.txt
models/runs/: events.out.tfevents.1657586201.6ce57d663813  events.out.tfevents.1657586241.6ce57d663813  events.out.tfevents.1657587178.14b9d44c9966  events.out.tfevents.1657636457.8e61dbd41591  events.out.tfevents.1657645975.8e61dbd41591  events.out.tfevents.1657645999.b44c1f38b49f
notebooks/: 1.0-EDA.ipynb  1__EDA.ipynb  2.0-model_explore.ipynb  2__metadata-prep.ipynb  3.0-dataset_cloud.ipynb  3__dataprep.ipynb  4.0-lightning_tpu.ipynb  4__training.ipynb  5.0-vit.ipynb  5.1-relabel-selftrained.ipynb  6.0-results copy.ipynb  6.0-results.ipynb  compare_auc_delong_xu.py  train_vit.py
notebooks/artifacts/model-ma5hmbiw:v0/: config.json
notebooks/results/: U-Ignore.pqt  U-MultiClass.pqt  U-Ones.pqt  U-Zeros.pqt
plots/ram_6_128x128_4/: l_1.p  l_2.p  l_4.p  l_5.p  l_6.p  l_7.p  l_8.p  l_9.p
plots/ram_6_8x8_1/: g_1.p  g_10.p  g_11.p  g_12.p  g_13.p  g_14.p  g_15.p  g_16.p  g_17.p  g_18.p  g_19.p  g_2.p  g_20.p  g_21.p  g_22.p  g_23.p  g_24.p  g_25.p  g_26.p  g_27.p  g_28.p  g_29.p  g_3.p  g_30.p  g_31.p  g_32.p  g_33.p  g_34.p  g_35.p  g_36.p  g_37.p  g_38.p  g_39.p  g_4.p  g_40.p  g_41.p  g_42.p  g_43.p  g_44.p  g_45.p  (+100 more)
src/: chexpert.py  config.YAML  config.yaml  custom_trainer.py  data_workflow.ipynb  data_workflow.py  dataset.py  efficientnet.py  preprocess.py  train.py  train_model.py  train_vit.py  utils.py  vertex_sweep.py
src/chexformer/: __init__.py  utils.py
src/chexformer/config/: constants.json  local_training_config.json  preprocess_config.json  training_config_local.json
src/data/: dataset.py
src/features/: build_features.py
src/models/: config.json  config.yaml  online_ocsvm.py  resnest.py  train_model.py  train_vit.py
(+10 files in other folders)
